--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -44,7 +44,8 @@ p.copywrite {
 @media only screen and (max-width: 400px){
 
     h1 {
-
+        
+        width: 385x;
         font-size: 75px;
         padding: 0;
         margin: -10px 0px 10px;
